# visual-learning-platform

./: .env.example  .gitignore  README.md
backend/: cache.py  config.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  vercel_app.py
backend/api/: index.py
backend/models/: __init__.py  concept.py  interaction.py  subject.py
backend/routes/: ai.py  compute.py  concepts.py  history.py
backend/schemas/: compute.py  concept.py  response.py
backend/seed/: seed_data.py
backend/services/: cache_service.py  compute_service.py  history_service.py  validation_service.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_database.py
frontend/: .firebaserc  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/config/: app_config.dart
frontend/lib/models/: compute_result.dart  concept.dart
frontend/lib/providers/: compute_provider.dart
frontend/lib/screens/: acids_bases_screen.dart  ai_assistant_screen.dart  atomic_structure_screen.dart  class_selection_screen.dart  concept.dart  concept_screen.dart  electric_circuits_screen.dart  fluid_pressure_screen.dart  geometry_screen.dart  gravitation_orbits_screen.dart  history_screen.dart  home_screen.dart  linear_equations_screen.dart  newtons_laws_screen.dart  projectile_motion_screen.dart  sim_run_mixin.dart  sim_widgets.dart  topic_list_screen.dart  waves_screen.dart
frontend/lib/services/: ai_service.dart  api_service.dart
frontend/lib/widgets/: ai_explanation_dialog.dart  animation_canvas.dart  graph_widget.dart  (+2 more)
frontend/web/: index.html  manifest.json
