[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduviz-backend"
version = "1.0.0"
description = "EduViz Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "psycopg2-binary==2.9.9",
    "redis==5.0.8",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "pydantic==2.8.2",
    "httpx==0.27.0",
]
